# openEO2Mintpy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  openeo2mintpy_settings_asc.json  openeo2mintpy_settings_dsc.json  openeo2mintpy_settings_t14_part1.json  openeo2mintpy_settings_t14_part2.json  openeo2mintpy_settings_t167.json  openeo2mintpy_settings_t167_part2.json  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/: sample_config.cfg  workflow_example.md
src/openeo2mintpy/: __init__.py  align.py  cli.py  config.py  constants.py  gui.py  metadata.py  openeo_client.py  postprocess.py  prepare.py  settings.py  split.py
tests/: conftest.py  test_cli.py  test_gui_imports.py  test_metadata.py  test_openeo.py  test_postprocess.py  test_prepare.py  test_split.py
