[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openeo2mintpy"
version = "0.1.0"
description = "Bridge between CDSE openEO Sentinel-1 InSAR outputs and MintPy time-series analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Burak Can Kara" },
]
keywords = [
    "InSAR",
    "openEO",
    "CDSE",
    "MintPy",
    "interferometry",
    "geodesy",
    "SAR",
    "time-series",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "h5py",
    "openeo",
    "tkintermapview",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "pre-commit",
]

[project.scripts]
openeo2mintpy = "openeo2mintpy.cli:main"

[project.urls]
Homepage = "https://github.com/bcankara/openEO2Mintpy"
Repository = "https://github.com/bcankara/openEO2Mintpy"
Issues = "https://github.com/bcankara/openEO2Mintpy/issues"
Documentation = "https://github.com/bcankara/openEO2Mintpy#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/openeo2mintpy"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
